Inicio de sesion, cierre de sesion httpOnly realizada.